--- a/levarint64/Cargo.toml
+++ b/levarint64/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "levarint"
+name = "levarint64"
 version = "0.1.0"
 edition = "2021"
 authors = ["fadedbee <crates@fadedbee.com>"]
