--- a/levarint64/Cargo.toml
+++ b/levarint64/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "levarint64"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["fadedbee <crates@fadedbee.com>"]
 license = "MIT OR Apache-2.0"
 description = "Little-Endian VARiable-length INTeger codec, compatible with no_std."
 readme = "README.md"
-homepage = ""
-publish = false
+homepage = "https://github.com/fadedbee/codecs/tree/main/levarint64"
+repository = "https://github.com/fadedbee/codecs/"
+publish = true
 categories = ["embedded", "no-std"]
 keywords = ["varint", "compression"]
 documentation = "https://docs.rs/levarint"
